@@ -4,7 +4,9 @@ History of this buildout
 5.0.19 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- sendmail script: send from help@milieuinfo.be.  This avoids problems
+  with SPF bounces on the zestsoftware.nl server.
+  [maurits]
 
 
 5.0.18 (2013-08-13)
